some changes, debug is reguired

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-# Библиотеки для захвата и обработки трафика
-# pcapy==0.11.4          # (или npcap для Windows, если требуется)
-pcapy
 scapy==2.5.0
-dpkt==1.9.8
-
-# Для работы с графическим интерфейсом
 PyQt5==5.15.9
-
-# Для работы с SSL/TLS
+loguru==0.7.0
+matplotlib==3.7.1
+dpkt==1.9.8
 pyOpenSSL==23.2.0
-
-# Для работы с визуализацией статистики
-matplotlib==3.8.0
-
-# Дополнительные зависимости
-numpy==1.25.0          # для работы с данными (опционально)
+numpy==1.25.0        
